// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emit asserts for:  output match: FormattedHTMLMessage 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "<h1>Hello World!</h1>",
      "description": "The default message.",
      "id": "foo.bar.baz",
    },
  ],
}
`;

exports[`emit asserts for:  output match: FormattedHTMLMessage 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(_reactIntl.FormattedHTMLMessage, {
      id: \\"foo.bar.baz\\",
      defaultMessage: \\"<h1>Hello World!</h1>\\"
    });
  }

}

exports.default = Foo;"
`;

exports[`emit asserts for:  output match: FormattedHTMLMessage 3`] = `
Array [
  Object {
    "defaultMessage": "<h1>Hello World!</h1>",
    "description": "The default message.",
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: FormattedMessage 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": "The default message.",
      "id": "foo.bar.baz",
    },
  ],
}
`;

exports[`emit asserts for:  output match: FormattedMessage 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(_reactIntl.FormattedMessage, {
      id: \\"foo.bar.baz\\",
      defaultMessage: \\"Hello World!\\"
    });
  }

}

exports.default = Foo;"
`;

exports[`emit asserts for:  output match: FormattedMessage 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message.",
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: defineMessages 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": "The default message",
      "id": "foo.bar.baz",
    },
    Object {
      "defaultMessage": "Hello Nurse!",
      "description": "Another message",
      "id": "foo.bar.biff",
    },
    Object {
      "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
      "description": "Counts kittens",
      "id": "app.home.kittens",
    },
    Object {
      "defaultMessage": "   Some whitespace   ",
      "description": "Whitespace",
      "id": "trailing.ws",
    },
    Object {
      "defaultMessage": "A quoted value ''{value}'",
      "description": "Escaped apostrophe",
      "id": "escaped.apostrophe",
    },
  ],
}
`;

exports[`emit asserts for:  output match: defineMessages 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

const msgs = (0, _reactIntl.defineMessages)({
  header: {
    \\"id\\": \\"foo.bar.baz\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"foo.bar.biff\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  },
  kittens: {
    \\"id\\": \\"app.home.kittens\\",
    \\"defaultMessage\\": \\"{count, plural, =0 {\\\\uD83D\\\\uDE2D} one {# kitten} other {# kittens}}\\"
  },
  trailingWhitespace: {
    \\"id\\": \\"trailing.ws\\",
    \\"defaultMessage\\": \\"   Some whitespace   \\"
  },
  escaped: {
    \\"id\\": \\"escaped.apostrophe\\",
    \\"defaultMessage\\": \\"A quoted value ''{value}'\\"
  }
});

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", null, _react.default.createElement(\\"h1\\", null, _react.default.createElement(_reactIntl.FormattedMessage, msgs.header)), _react.default.createElement(\\"p\\", null, _react.default.createElement(_reactIntl.FormattedMessage, msgs.content)), _react.default.createElement(\\"p\\", null, _react.default.createElement(_reactIntl.FormattedMessage, msgs.kittens)));
  }

}

exports.default = Foo;"
`;

exports[`emit asserts for:  output match: defineMessages 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
    "description": "Counts kittens",
    "id": "app.home.kittens",
  },
  Object {
    "defaultMessage": "   Some whitespace   ",
    "description": "Whitespace",
    "id": "trailing.ws",
  },
  Object {
    "defaultMessage": "A quoted value ''{value}'",
    "description": "Escaped apostrophe",
    "id": "escaped.apostrophe",
  },
]
`;

exports[`emit asserts for:  output match: descriptionsAsObjects 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": Object {
        "metadata": "Additional metadata content.",
        "text": "Something for the translator.",
      },
      "id": "foo.bar.baz",
    },
  ],
}
`;

exports[`emit asserts for:  output match: descriptionsAsObjects 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(_reactIntl.FormattedMessage, {
      id: \\"foo.bar.baz\\",
      defaultMessage: \\"Hello World!\\"
    });
  }

}

exports.default = Foo;"
`;

exports[`emit asserts for:  output match: descriptionsAsObjects 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": Object {
      "metadata": "Additional metadata content.",
      "text": "Something for the translator.",
    },
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: enforceDefaultMessage 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": undefined,
      "description": undefined,
      "id": "TRANSLATION_KEY",
    },
  ],
}
`;

exports[`emit asserts for:  output match: enforceDefaultMessage 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

(0, _reactIntl.defineMessages)({
  test: {
    \\"id\\": \\"TRANSLATION_KEY\\"
  }
});
const testMessage = {
  id: 'TRANSLATION_KEY2'
};

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(_react.default.Fragment, null, _react.default.createElement(_reactIntl.FormattedMessage, {
      id: \\"foo.bar.baz\\"
    }), _react.default.createElement(_reactIntl.FormattedMessage, testMessage));
  }

}

exports.default = Foo;"
`;

exports[`emit asserts for:  output match: enforceDefaultMessage 3`] = `
Array [
  Object {
    "id": "TRANSLATION_KEY",
  },
]
`;

exports[`emit asserts for:  output match: enforceDescriptions 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": undefined,
      "id": "foo.bar.baz",
    },
  ],
}
`;

exports[`emit asserts for:  output match: enforceDescriptions 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(_reactIntl.FormattedMessage, {
      id: \\"foo.bar.baz\\",
      defaultMessage: \\"Hello World!\\"
    });
  }

}

exports.default = Foo;"
`;

exports[`emit asserts for:  output match: enforceDescriptions 3`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "id": "foo.bar.baz",
  },
]
`;

exports[`emit asserts for:  output match: formatMessageCall 1`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "bar",
      "description": "baz",
      "id": "foo",
    },
  ],
}
`;

exports[`emit asserts for:  output match: formatMessageCall 2`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

const objectPointer = {
  id: 'foo.bar.invalid',
  defaultMessage: 'This cannot be extracted',
  description: 'the plugin only supports inline objects'
};

class Foo extends _react.Component {
  render() {
    const msgs = {
      baz: this.props.intl.formatMessage({
        id: 'foo.bar.baz',
        defaultMessage: 'Hello World!',
        description: 'The default message'
      }),
      biff: this.props.intl.formatMessage({
        id: 'foo.bar.biff',
        defaultMessage: 'Hello Nurse!',
        description: 'Another message'
      }),
      invalid: this.props.intl.formatMessage(objectPointer)
    };
    return _react.default.createElement(\\"div\\", null, _react.default.createElement(\\"h1\\", null, msgs.header), _react.default.createElement(\\"p\\", null, msgs.content), _react.default.createElement(\\"span\\", null, _react.default.createElement(_reactIntl.FormattedMessage, {
      id: \\"foo\\",
      defaultMessage: \\"bar\\"
    })));
  }

}

var _default = (0, _reactIntl.injectIntl)(Foo);

exports.default = _default;"
`;

exports[`emit asserts for:  output match: formatMessageCall 3`] = `
Array [
  Object {
    "defaultMessage": "bar",
    "description": "baz",
    "id": "foo",
  },
]
`;

exports[`options additionalComponentNames 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "Greeting to the world",
    "id": "greeting-world",
  },
]
`;

exports[`options correctly overrides the id when overrideIdFn is provided 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

const msgs = (0, _reactIntl.defineMessages)({
  header: {
    \\"id\\": \\"HELLO.foo.bar.baz.12.string\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"HELLO.foo.bar.biff.12.object\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  }
});

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(\\"div\\", null, _react.default.createElement(\\"h1\\", null, _react.default.createElement(_reactIntl.FormattedMessage, msgs.header)), _react.default.createElement(\\"p\\", null, _react.default.createElement(_reactIntl.FormattedMessage, msgs.content)), _react.default.createElement(_reactIntl.FormattedMessage, {
      id: \\"HELLO.foo.bar.zoo.12.object\\",
      defaultMessage: \\"Hello World!\\"
    }), _react.default.createElement(_reactIntl.FormattedHTMLMessage, {
      id: \\"HELLO.foo.bar.delta.21.string\\",
      defaultMessage: \\"<h1>Hello World!</h1>\\"
    }));
  }

}

exports.default = Foo;"
`;

exports[`options correctly overrides the id when overrideIdFn is provided 2`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "HELLO.foo.bar.baz.12.string",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": Object {
      "metadata": "Additional metadata content.",
      "text": "Something for the translator.",
    },
    "id": "HELLO.foo.bar.biff.12.object",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": Object {
      "metadata": "Additional metadata content.",
      "text": "Something for the translator. Another description",
    },
    "id": "HELLO.foo.bar.zoo.12.object",
  },
  Object {
    "defaultMessage": "<h1>Hello World!</h1>",
    "description": "The default message.",
    "id": "HELLO.foo.bar.delta.21.string",
  },
]
`;

exports[`options removeDefaultMessage should remove default message 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _react = _interopRequireWildcard(require(\\"react\\"));

var _reactIntl = require(\\"react-intl\\");

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || typeof obj !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

const messages = (0, _reactIntl.defineMessages)({
  foo: {
    \\"id\\": \\"greeting-user\\"
  }
});

class Foo extends _react.Component {
  render() {
    return _react.default.createElement(_reactIntl.FormattedMessage, {
      id: \\"greeting-world\\"
    });
  }

}

exports.default = Foo;"
`;

exports[`options removeDefaultMessage should remove default message 2`] = `
Array [
  Object {
    "defaultMessage": "Hello, {name}",
    "description": "Greeting the user",
    "id": "greeting-user",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "Greeting to the world",
    "id": "greeting-world",
  },
]
`;

exports[`options respects extractFromFormatMessageCall 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello Nurse!",
    "description": "Another message",
    "id": "foo.bar.biff",
  },
  Object {
    "defaultMessage": "bar",
    "description": "baz",
    "id": "foo",
  },
]
`;

exports[`options respects extractSourceLocation 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "end": Object {
      "column": 78,
      "line": 6,
    },
    "file": "test@@sep@@fixtures@@sep@@extractSourceLocation@@sep@@actual.js",
    "id": "foo.bar.baz",
    "start": Object {
      "column": 11,
      "line": 6,
    },
  },
]
`;

exports[`options respects moduleSourceName 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message.",
    "id": "foo.bar.baz",
  },
]
`;

exports[`options should be able to parse inline _ from @formatjs/macro 1`] = `
Array [
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message.",
    "id": "foo.bar.baz",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "header",
  },
  Object {
    "defaultMessage": "Hello World!",
    "description": "The default message",
    "id": "header2",
  },
]
`;
